Sun Feb 15 19:57:20 CET 2004 Daniel Veillard <daniel@veillard.com>

	* libxslt/attrvt.c: found the memory leak shown in DocBook,
	  mostly an error handling some ATV coupled with doctionnaries
	  reference counting.
	* libxslt/documents.c libxslt/transform.c libxslt/variables.c
	  libxslt/xslt.c: added a bit of debug to be able to trace 
	  dictionnaries.

Fri Feb 13 16:59:46 CET 2004 Daniel Veillard <daniel@veillard.com>

	* libxslt/attrvt.c libxslt/Makefile.am: added new code to handle
	  attribute value templates
	* libxslt/*.c libxslt/*.h: also a lot of work to reuse the 
	  dictionaries at the stylesheet and transformation level.
	* configure.in: this relies on a recent version of libxml2 
	  with the sub dictionnary catalog.

Sun Feb  8 16:53:14 HKT 2004 William Brack <wbrack@mmm.com.hk>

	* libxslt/transform.c: added check for "?>" in PI content
	  (Bug 133726)

Sat Jan 31 02:43:45 PST 2004 William Brack <wbrack@mmm.com.hk>

	* libxslt/namespaces.c: fixed problem with attribute
	  namespace (Bug 132953)

Thu Jan 29 14:47:22 PST 2004 William Brack <wbrack@mmm.com.hk>

	* libxslt/transform.c: added check for "--" or ending '-'
	  in xsl:comment (Bug 132742)

Thu Jan 29 14:08:31 PST 2004 William Brack <wbrack@mmm.com.hk>

	* libxslt/transform.c, libxslt/attributes.c: added
	  validation of QName for xsl:element and xsl:attribute
	  (Bug 132531)

Fri Jan 23 18:52:22 HKT 2004 William Brack <wbrack@mmm.com.hk>

	* libxslt/pattern.c: changed priority of template patterns
	  starting with '//' from 0.0 to 0.5 (Bug 131705)

Thu Jan 22 18:42:03 CET 2004 Daniel Veillard <daniel@veillard.com>

	* libxslt/xslt.c: applied patch from Stefan Kost to fix
	  behaviour on unknown element from the XSLT namespace.
	* python/generator.py: applied patch from Stephane bidoul
	  to export enums in the bindings.

Thu Jan 22 10:35:14 HKT 2004 William Brack <wbrack@mmm.com.hk>

	* tests/general/Makefile.am, tests/general/bug-141.out,