@@ -1,3 +1,8 @@
+Sun Feb 15 23:01:09 CET 2004 Daniel Veillard <daniel@veillard.com>
+
+	* libxslt/attrvt.c libxslt/templates.c: removed the two last
+	  known bug with the new code, was overoptimizing a bit...
+
 Sun Feb 15 19:57:20 CET 2004 Daniel Veillard <daniel@veillard.com>
 
 	* libxslt/attrvt.c: found the memory leak shown in DocBook,
